website/style.css
* {
	font-family:  "Open Sans", sans-serif;
	border: 0px solid rgba(0,0,0,1);

}

a {
	color: rgb(180,150,110);
}

body {
	font-size: 100%;
	background-color: rgba(10,10,10,.5);
	background-image:url(bg1.jpg);
	background-position: left;
	background-attachment: fixed;
	background-size: cover;
}

h1 {
	font-family: Oswald, sans-serif;
	text-align: center;
	font-size: 3.125em;
	color: rgb(200, 170, 130);
	font-variant: small-caps;
	font-weight: 500;
}

h2 {
	font-family: Oswald, sans-serif;
	font-size: 2em;
	color: rgb(200, 170, 130);
	border-bottom: 4px solid rgb(200, 170, 130);
	font-variant: small-caps;
	font-weight: 400;
}

#header {
	margin:auto;
	width: 90%;
	height: 30%;
}

#my_photo_holder {
	text-align: center;
	margin:auto;
	width:100%;
	height:100%;
}

#my_photo {
	height:250px;
	width: auto;
	border-radius: 20%;
	border: 10px solid rgba(200,170,130,.9);
}

#meat {
	background-color: rgba(255,255,240,1);
	border: 10px double rgb(200,170,130);
	border-radius: 30px;
	margin: auto;
	width: 60%;
}

#footer {
	margin: 10px 0px 0px 0px;
	height:5em;
	width:auto;
	background-color: rgba(255,255,240,1);
	border: 10px double rgb(200,170,130);
	border-radius: 15px;
	text-align: justify;
	min-width: 500px;
}

#footer_notes {
	margin: .7em 20% 5px 20%;
	height: 1.2em;
	padding: 0px;
}

#footer_notes:after {
	content: '';
	display: inline-block;
	width: 100%;
}

#footer_notes li {
	display: inline-block;
}

#made-by {
	font-family:Pacifico;
	font-size: 1.5em;
	text-align:center;
	margin-top: 0px;
}

.content {
		margin-left: 7.5%;
		margin-right: 7.5%;
}

